# unjaena-collector

./: .env.example  .gitignore  CHANGELOG.md  ForensicCollector.spec  LICENSE  LICENSES.md  README.md  SECURITY.md  build.py  config.development.json  config.example.json  config.json  config.production.json  entitlements.plist  pyproject.toml  requirements.txt  run.bat  run.sh  upload_to_r2.py  version_info.txt
.github/workflows/: live-collection-test.yml  notary-diagnose.yml  notary-staple.yml  release.yml
docs/: make_readme_demo_gif.py
requirements/: base.txt  linux.txt  macos.txt  mobile.txt  windows.txt
resources/: USB_DEPENDENCIES.md
resources/agent_apk/: ForensicAgent.apk.sha256
resources/downgrade_apks/: README.txt
src/: cli.py  main.py  test_upload_readiness_contract.py
src/collectors/: __init__.py  android_collector.py  android_collector_extended.py  android_edl_collector.py  android_fastboot_collector.py  android_frida_collector.py  android_mtk_collector.py  android_wifi_collector.py  artifact_collector.py  base_mft_collector.py  e01_artifact_collector.py  forensic_disk_collector.py  ios_backup_decryptor.py  ios_collector.py  linux_artifacts.py  linux_collector.py  live_command.py  macos_artifacts.py  macos_collector.py  (+13 more)
tests/: test_client_runner.py  test_gui.py  test_public_preflight.py
tools/: README.md  build_desktop.py  checksums.py  device_enumerator_smoke.py  download_libimobiledevice.py  gui_workflow_smoke.py  package_desktop.py  profile_filter_smoke.py  public_preflight.py  release_gate.py  server_profile_render_smoke.py  sign_macos.py
(+100 files in other folders)
