[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unjaena-collector"
version = "0.1.0"
description = "Open collection client"
requires-python = ">=3.10"
dependencies = ["requests>=2.31", "cryptography>=42"]

[project.scripts]
unjaena-collector = "unjaena_collector.cli:main"
