[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unjaena-collector"
version = "0.2.1"
description = "Open collection client"
requires-python = ">=3.10"
dependencies = ["requests>=2.31", "cryptography>=42"]

[project.scripts]
unjaena-collector = "unjaena_collector.cli:main"
unjaena-collector-gui = "unjaena_collector.gui:main"

[project.optional-dependencies]
desktop = ["pyinstaller>=6.0"]
