[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unjaena-collector"
version = "0.3.9"
description = "Open collection client"
requires-python = ">=3.10"
dependencies = ["requests>=2.31", "cryptography>=42"]

[project.scripts]
unjaena-collector = "unjaena_collector.cli:main"
unjaena-collector-gui = "unjaena_collector.gui:main"

[project.optional-dependencies]
desktop = ["pyinstaller>=6.0", "PyQt6>=6.6,<6.8", "pymobiledevice3>=7.5.1", "adb-shell[usb]>=0.4.4", "libusb1>=3.0.0", "pyusb>=1.2.1", "wmi>=1.5.1; platform_system=='Windows'", "pywin32>=306; platform_system=='Windows'"]
